# auv

./: Cargo.toml  README.md
aurt/: Cargo.toml
aurt-macro/: Cargo.toml  README.asciidoc
aurt-macro/examples/: export.rs  import.rs
aurt-macro/src/: export.rs  import.rs  lib.rs
aurt/src/: lib.rs
auv-chip-hal/: Cargo.toml
auv-chip-hal/src/: lib.rs  rng.rs  word.rs
auv-rt/: Cargo.toml
auv-rt/src/: lib.rs  task.rs  waker.rs
auv-sync/: Cargo.toml
core/: Cargo.toml
executor/: Cargo.toml
executor/src/: event.rs  lib.rs
platform/esp32/auv-chip-hal/: Cargo.toml
platform/esp8266/auv-chip-hal/: Cargo.toml
rt/src/: signal.rs  waker.rs
