[package]
name = "aurt-macro"
version = "0.1.0"
authors = ["tiannian <dtiannian@aliyun.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0", features = ["full", "extra-traits", "parsing", "printing"]}
quote = "1.0"

